# forum

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  env.local  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 1488d62dcd68_delete_post_votes.py  16ced7899727_fixed_votes.py  58f53271d529_add_core_tables.py  a1d4515c3b31_init_create_all_tables_with_score.py  e32818e21205_add_thread_votes_table.py  f34a5d703adc_baza.py  fdddacb790a5_move_post_votes_to_posts_schema.py
app/: init_db.py  main.py
app/core/config/: settings.py
app/core/database/: redis.py
app/core/docs/: tags_description.py
app/models/: __init__.py
app/models/admin_logs/: admin_logs.py
app/models/boards/: board_categories.py  boards.py
app/models/post_votes/: post_votes.py
app/models/posts/: post_votes.py  posts.py
app/models/threads/: thread_votes.py  threads.py
app/models/users/: users.py
app/repositories/: BaseRepository.py  VoteMixin.py  __init__.py
app/repositories/admin_logs/: admin_logs.py
app/repositories/boards/: board_categories.py  boards.py
app/repositories/post_votes/: post_votes.py
app/repositories/posts/: post_votes.py  posts.py
app/repositories/threads/: thread_votes.py  threads.py
app/repositories/users/: users.py
app/routers/: __init__.py
app/routers/boards/: board_category.py  boards.py
app/routers/posts/: posts.py
app/routers/threads/: threads.py
app/routers/users/: auth.py  users.py
app/schemas/: __init__.py
app/schemas/admin_logs/: admin_logs.py
app/schemas/auth/: auth.py
app/schemas/boards/: board_category.py  boards.py
app/schemas/post_votes/: post_votes.py
app/schemas/posts/: post_votes.py  posts.py
app/schemas/threads/: thread_votes.py  threads.py
app/schemas/users/: users.py
app/services/: auth_service.py
app/utils/: security.py
